[package]
name = "isoalloc"
version = "0.2.1"
authors = ["David Carlier <devnexen@gmail.com>"]
keywords = ["isoalloc", "allocator", "security"]
categories = ["memory-management"]
description = "Security oriented allocator"
license = "MIT"

[workspace]
members = ["libisoalloc-sys"]

[dependencies]
libisoalloc-sys = {path = "libisoalloc-sys", version = "0.2.1"}
