[package]
name = "isoalloc"
version = "0.2.6"
authors = ["David Carlier <devnexen@gmail.com>"]
keywords = ["isoalloc", "allocator", "security"]
categories = ["memory-management"]
description = "Security oriented allocator"
license = "MIT"

[workspace]
members = ["libisoalloc-sys"]

[dependencies]
libisoalloc-sys = {path = "libisoalloc-sys", version = "0.2.5"}

[features]
userfaultfd = ["libisoalloc-sys/userfaultfd"]
sanity = ["libisoalloc-sys/sanity"]
tagging = ["libisoalloc-sys/tagging"]
neon = ["libisoalloc-sys/neon"]
mte = ["libisoalloc-sys/mte"]
memory_tagging = ["libisoalloc-sys/memory_tagging"]
