[package]
name = "libisoalloc-sys"
version = "0.2.5"
edition = "2021"
authors = ["David Carlier <devnexen@gmail.com>"]
description = "Security oriented allocator"
license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
userfaultfd = []
sanity = []
tagging = []
neon = []
mte = []
memory_tagging = []
