[package]
name = "libisoalloc-sys"
version = "0.2.8"
edition = "2021"
authors = ["David Carlier <devnexen@gmail.com>"]
description = "Security oriented allocator"
license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
libc = "0.2"

[features]
userfaultfd = []
sanity = []
tagging = []
neon = []
mte = []
memory_tagging = []
nothread = []
smallmem = []
